tests/snapshots/custom_menu/fmSyntaxColorizer/Admin Menu ADMIN - ID 36.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="Admin Menu ADMIN" id="36">
	<UUID modifications="22" userName="R.Watson" accountName="admin" timestamp="2020-07-06T15:37:09">EA610D13-3C6F-42D9-95B4-C8E441E9DF3E</UUID>
	<MenuItemList membercount="15">
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Manage Scripts…"]]></Calculation>
				<ChunkList hash="25ADA03BF065508AE7D7126D9DB82358">
					<Chunk type="NoRef">&quot;Manage Scripts…&quot;</Chunk>
				</ChunkList>
			</Name>
			<Shortcut key="83" modifier="5"></Shortcut>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="True"></Override>
			<Step enable="True" id="88" name="Scriptarbeitsbereich öffnen">
				<StepText>Scriptarbeitsbereich öffnen</StepText>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Halt Script"]]></Calculation>
				<ChunkList hash="7E73FCB8038A9F4158FBE21AAF79B4EA">
					<Chunk type="NoRef">&quot;Halt Script&quot;</Chunk>
				</ChunkList>
			</Name>
			<Shortcut key="46" modifier="4"></Shortcut>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="True"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “Halt Script” ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<ScriptReference id="147" name="Halt Script"></ScriptReference>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Toggle Toolbar"]]></Calculation>
				<ChunkList hash="72636496316A21817767EDA5BA7BC8CB">
					<Chunk type="NoRef">&quot;Toggle Toolbar&quot;</Chunk>
				</ChunkList>
			</Name>
			<Shortcut key="83" modifier="6"></Shortcut>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="True"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “Toggle Toolbar” ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<ScriptReference id="29" name="Toggle Toolbar"></ScriptReference>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="76" modifier="4"></Shortcut>
			<Command name="Layoutmodus" id="49156"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Colors"]]></Calculation>
				<ChunkList hash="23C3B819CB31F8BC46581D76E3AE50F6">
					<Chunk type="NoRef">&quot;Colors&quot;</Chunk>
				</ChunkList>
			</Name>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="False"></Override>
			<Step enable="True" id="6" name="Gehe zu Layout">
				<StepText>Gehe zu Layout [ “Colors” (_Color) ]</StepText>
				<LayoutDestination value="SelectedLayout"></LayoutDestination>
				<Layout id="5" name="Colors"></Layout>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["GRR Colors"]]></Calculation>
				<ChunkList hash="6391E00D35568F71A7BCA569AB3210C0">
					<Chunk type="NoRef">&quot;GRR Colors&quot;</Chunk>
				</ChunkList>
			</Name>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="False"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “GRR Colors” ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<ScriptReference id="110" name="GRR Colors"></ScriptReference>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Foreign Commands"]]></Calculation>
				<ChunkList hash="8A8F24EB42418B9E46D95E904DC8D50E">
					<Chunk type="NoRef">&quot;Foreign Commands&quot;</Chunk>
				</ChunkList>
			</Name>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="False"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “Show All GUI-Syntax” ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<ScriptReference id="92" name="Show All GUI-Syntax"></ScriptReference>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["GRR Foreign Commands"]]></Calculation>
				<ChunkList hash="334B695788F4420C6C33F867FEDDC8A6">
					<Chunk type="NoRef">&quot;GRR Foreign Commands&quot;</Chunk>
				</ChunkList>
			</Name>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="False"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “GRR GUI-Syntax” ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<ScriptReference id="111" name="GRR GUI-Syntax"></ScriptReference>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Prepare Release"]]></Calculation>
				<ChunkList hash="3505FA0AA25359A663D4E0CB73C6F53B">
					<Chunk type="NoRef">&quot;Prepare Release&quot;</Chunk>
				</ChunkList>
			</Name>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="False"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “Prepare Release” ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<ScriptReference id="31" name="Prepare Release"></ScriptReference>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[0]]></Calculation>
					<ChunkList hash="9BF55A5D51230A8EA20D4BAA0F468EEC">
						<Chunk type="NoRef">0</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[0]]></Calculation>
					<ChunkList hash="9BF55A5D51230A8EA20D4BAA0F468EEC">
						<Chunk type="NoRef">0</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Postpare Release"]]></Calculation>
				<ChunkList hash="5718FB655467B4BB691DEDDA1A887231">
					<Chunk type="NoRef">&quot;Postpare Release&quot;</Chunk>
				</ChunkList>
			</Name>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="False"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “Postpare Release” ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<ScriptReference id="157" name="Postpare Release"></ScriptReference>
			</Step>
		</CustomMenuItem>
	</MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Options browseMode="True" findMode="True" previewMode="True">
		<Override>
			<name>
				<Calculation><![CDATA["Admin"]]></Calculation>
				<ChunkList hash="3C22132625EB892C4D19318F40FE836D">
					<Chunk type="NoRef">&quot;Admin&quot;</Chunk>
				</ChunkList>
			</name>
		</Override>
	</Options>
</CustomMenu>
