tests/snapshots/custom_menu/fmSyntaxColorizer/App Menu - ID 35.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="App Menu" id="35">
	<UUID modifications="33" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">3E5DEA33-18CA-4D62-B949-DA700B5BBB47</UUID>
	<MenuItemList membercount="10">
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Home"]]></Calculation>
				<ChunkList hash="DD24E5162C70936367308BF58F989A29">
					<Chunk type="NoRef">&quot;Home&quot;</Chunk>
				</ChunkList>
			</Name>
			<Shortcut key="49" modifier="4"></Shortcut>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="True"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “Home BTN” ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<ScriptReference id="34" name="Home BTN"></ScriptReference>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Syntax"]]></Calculation>
				<ChunkList hash="1A38D7C98DFA7A4AEC7DB84147C2448A">
					<Chunk type="NoRef">&quot;Syntax&quot;</Chunk>
				</ChunkList>
			</Name>
			<Shortcut key="50" modifier="4"></Shortcut>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="True"></Override>
			<Step enable="True" id="6" name="Gehe zu Layout">
				<StepText>Gehe zu Layout [ “Syntax” (_Syntax) ]</StepText>
				<LayoutDestination value="SelectedLayout"></LayoutDestination>
				<Layout id="6" name="Syntax"></Layout>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Colors"]]></Calculation>
				<ChunkList hash="23C3B819CB31F8BC46581D76E3AE50F6">
					<Chunk type="NoRef">&quot;Colors&quot;</Chunk>
				</ChunkList>
			</Name>
			<Shortcut key="51" modifier="4"></Shortcut>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="True"></Override>
			<Step enable="True" id="6" name="Gehe zu Layout">
				<StepText>Gehe zu Layout [ “Palettes” (_Palette) ]</StepText>
				<LayoutDestination value="SelectedLayout"></LayoutDestination>
				<Layout id="8" name="Palettes"></Layout>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Examples"]]></Calculation>
				<ChunkList hash="6B5E37B820E15917F278B6C73B7A15EA">
					<Chunk type="NoRef">&quot;Examples&quot;</Chunk>
				</ChunkList>
			</Name>
			<Shortcut key="52" modifier="4"></Shortcut>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="True"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “Open Script Editor” ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<ScriptReference id="49" name="Open Script Editor"></ScriptReference>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Colorize!"]]></Calculation>
				<ChunkList hash="D602E4CD66B2C7FD0C14310049AB5DC6">
					<Chunk type="NoRef">&quot;Colorize!&quot;</Chunk>
				</ChunkList>
			</Name>
			<Shortcut key="53" modifier="4"></Shortcut>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="True"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “Colorize!” ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<ScriptReference id="88" name="Colorize!"></ScriptReference>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Syntax Colorizing enable/disable"]]></Calculation>
				<ChunkList hash="045DA0B98269965A35C75D2ED95DEF0E">
					<Chunk type="NoRef">&quot;Syntax Colorizing enable/disable&quot;</Chunk>
				</ChunkList>
			</Name>
			<Shortcut key="54" modifier="4"></Shortcut>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="True"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “MBS_SyntaxColoring( Action )”; Parameter: &quot;Toggle&quot; ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<Calculation><![CDATA["Toggle"]]></Calculation>
				<DisplayCalculation>
					<Chunk type="NoRef">&quot;Toggle&quot;</Chunk>
				</DisplayCalculation>
				<ScriptReference id="41" name="MBS_SyntaxColoring( Action )"></ScriptReference>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["Variable Checking enable/disable"]]></Calculation>
				<ChunkList hash="D2912301729F777981CE4A725FEDEC52">
					<Chunk type="NoRef">&quot;Variable Checking enable/disable&quot;</Chunk>
				</ChunkList>
			</Name>
			<Shortcut key="55" modifier="4"></Shortcut>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="True"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “MBS_SyntaxColoring( Action )”; Parameter: &quot;VariableChecking.Toggle&quot; ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<Calculation><![CDATA["VariableChecking.Toggle"]]></Calculation>
				<DisplayCalculation>
					<Chunk type="NoRef">&quot;VariableChecking.Toggle&quot;</Chunk>
				</DisplayCalculation>
				<ScriptReference id="41" name="MBS_SyntaxColoring( Action )"></ScriptReference>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[Wenn( Abs(Hole( SystemPlattform )) = 2; 1; 0 )]]></Calculation>
					<ChunkList hash="E62B4F55AE0CC9EF21640EC028CAB70F">
						<Chunk type="FunctionRef">Wenn</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">Abs</Chunk>
						<Chunk type="NoRef">(</Chunk>
						<Chunk type="FunctionRef">Hole</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">SystemPlattform</Chunk>
						<Chunk type="NoRef"> )) = 2; 1; 0 )</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
	</MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Options browseMode="True" findMode="True" previewMode="True">
		<Override>
			<name>
				<Calculation><![CDATA["fmSyntaxColorizer"]]></Calculation>
				<ChunkList hash="293F258D43EE21E6BB4029DC29B7C1AF">
					<Chunk type="NoRef">&quot;fmSyntaxColorizer&quot;</Chunk>
				</ChunkList>
			</name>
		</Override>
	</Options>
</CustomMenu>
