tests/snapshots/custom_menu/fmSyntaxColorizer/Color Menu - ID 37.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="Color Menu" id="37">
	<UUID modifications="4" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">555EF2EC-1824-44BF-A954-E2DF8655C2CA</UUID>
	<MenuItemList membercount="1">
		<CustomMenuItem isSubMenuItem="True" isSeparatorItem="False">
			<CustomMenuReference id="29" name="[Textfarbe]"></CustomMenuReference>
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
	</MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Options browseMode="True" findMode="True" previewMode="True">
		<Override>
			<name>
				<Calculation><![CDATA["Color"]]></Calculation>
				<ChunkList hash="7680F72426782F35384D0636A00169A3">
					<Chunk type="NoRef">&quot;Color&quot;</Chunk>
				</ChunkList>
			</name>
		</Override>
	</Options>
</CustomMenu>
