tests/snapshots/custom_menu/fmSyntaxColorizer/Edit Menu - ID 3.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="Edit Menu" id="3">
	<UUID modifications="5" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">5E08C6AF-75B9-4827-96D4-971E6E5A7005</UUID>
	<MenuItemList membercount="19">
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="90" modifier="4"></Shortcut>
			<Command name="Rückgängig" id="49320"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="90" modifier="5"></Shortcut>
			<Command name="Wiederholen" id="49321"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="88" modifier="4"></Shortcut>
			<Command name="Ausschneiden" id="57635"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="67" modifier="4"></Shortcut>
			<Command name="Kopieren" id="57634"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="86" modifier="4"></Shortcut>
			<Command name="Einfügen" id="57637"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[Wenn( Abs(Hole( SystemPlattform )) = 2; 1; 0 )]]></Calculation>
					<ChunkList hash="E62B4F55AE0CC9EF21640EC028CAB70F">
						<Chunk type="FunctionRef">Wenn</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">Abs</Chunk>
						<Chunk type="NoRef">(</Chunk>
						<Chunk type="FunctionRef">Hole</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">SystemPlattform</Chunk>
						<Chunk type="NoRef"> )) = 2; 1; 0 )</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="" id="49152"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="Löschen" id="57632"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="65" modifier="4"></Shortcut>
			<Command name="Alles auswählen" id="57642"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="True" isSeparatorItem="False">
			<CustomMenuReference id="18" name="[Suchen/Ersetzen]"></CustomMenuReference>
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="True" isSeparatorItem="False">
			<CustomMenuReference id="27" name="[Rechtschreibung]"></CustomMenuReference>
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="True" isSeparatorItem="False">
			<CustomMenuReference id="21" name="[Objekt]"></CustomMenuReference>
			<Conditions>
				<Install>
					<Calculation><![CDATA[Wenn( Abs(Hole( SystemPlattform )) = 2; 1; 0 )]]></Calculation>
					<ChunkList hash="E62B4F55AE0CC9EF21640EC028CAB70F">
						<Chunk type="FunctionRef">Wenn</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">Abs</Chunk>
						<Chunk type="NoRef">(</Chunk>
						<Chunk type="FunctionRef">Hole</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">SystemPlattform</Chunk>
						<Chunk type="NoRef"> )) = 2; 1; 0 )</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[Wenn( Abs(Hole( SystemPlattform )) = 2; 1; 0 )]]></Calculation>
					<ChunkList hash="E62B4F55AE0CC9EF21640EC028CAB70F">
						<Chunk type="FunctionRef">Wenn</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">Abs</Chunk>
						<Chunk type="NoRef">(</Chunk>
						<Chunk type="FunctionRef">Hole</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">SystemPlattform</Chunk>
						<Chunk type="NoRef"> )) = 2; 1; 0 )</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="Feldinhalte exportieren..." id="50217"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[Wenn( Abs(Hole( SystemPlattform )) = 2; 1; 0 )]]></Calculation>
					<ChunkList hash="E62B4F55AE0CC9EF21640EC028CAB70F">
						<Chunk type="FunctionRef">Wenn</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">Abs</Chunk>
						<Chunk type="NoRef">(</Chunk>
						<Chunk type="FunctionRef">Hole</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">SystemPlattform</Chunk>
						<Chunk type="NoRef"> )) = 2; 1; 0 )</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[Wenn( Abs(Hole( SystemPlattform )) = 2; 1; 0 )]]></Calculation>
					<ChunkList hash="E62B4F55AE0CC9EF21640EC028CAB70F">
						<Chunk type="FunctionRef">Wenn</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">Abs</Chunk>
						<Chunk type="NoRef">(</Chunk>
						<Chunk type="FunctionRef">Hole</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">SystemPlattform</Chunk>
						<Chunk type="NoRef"> )) = 2; 1; 0 )</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="Einstellungen..." id="49153"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
	</MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Bearbeiten" value="3"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
